fix bug on chrome where width is too large due to traditional scrollbar

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,10 +14,11 @@
 
 .app {
     height: 100vh;
+    width: 100%; /* 100% instead of 100vw ensures chrome and other similar browsers do not have excessive width due to traditional scrollbars */
     text-align: left;
     font-size: 16px;
     color: white;
-    background-color: var(--standard-background);
+    background-color: red;
     overflow: auto;
 }
 
@@ -35,7 +36,7 @@
 }
 
 .page {
-    width: 100vw;
+    width: 100%;
     min-height: calc(100vh - 59.6px);
     position: relative;
     display: flex;
@@ -48,7 +49,7 @@
 }
 
 .navbar {
-    width: 100vw;
+    width: 100%;
     height: 59.6px;
     position: relative;
     padding: 5px 9%;
@@ -1869,7 +1870,7 @@ input:checked + .toggle:before {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     top: 0;
     left: 0;
